--- a/doctor/static/doctor/styles/style.css
+++ b/doctor/static/doctor/styles/style.css
@@ -53,7 +53,7 @@ body {
   border-radius: 10px;
 }
 
-#add-patient
+.addBtn
 {
   background-color: lime;
   width: 40%;
@@ -65,10 +65,65 @@ body {
   font-size: 100%;
 }
 
-#add-patient-modal{
+.delete {
   background-color: red;
 }
 
-.delete {
-  background-color: red;
+.action {
+  text-decoration: none;
+  color: black;
+  border: black solid 2px;
+  border-radius: 10px;
+  padding: 5px;
+}
+
+.blue {
+  background-color: lightblue;
+}
+
+.green {
+  background-color: lightgreen;
+}
+
+
+.add-new {
+  width: 50%;
+  margin: auto;
+  border: none;
+  margin-bottom: 20px;
+  height: 10%;
+}
+
+table {
+  margin: auto;
+  border-collapse: collapse;
+  width: 50%;
+}
+td {
+  padding: 10px;
+  vertical-align: top;
+}
+input[type="text"], textarea {
+  width: 100%;
+  padding: 8px;
+  box-sizing: border-box;
+}
+textarea {
+  resize: vertical;
+}
+
+.hidden {
+  display: none;
+}
+
+.period-container
+{
+  width: 90%;
+  min-height: 100px;
+  margin: auto;
+  margin-top: 20px;
+  margin-bottom: 10px;
+  border: black dotted 1px;
+  border-radius: 10px;
+  text-align: center;
 }
