--- a/doctor/templates/patients.html
+++ b/doctor/templates/patients.html
@@ -1,11 +1,14 @@
 {% extends "layout.html" %}
+{% load static %}
 
 {% block title %}
   Patients
 {% endblock title %}
 
 {% block content %}
-  <button id="add-patient">Add new patient</button>
+  <script src="{% static 'doctor/scripts/script.js' %}"></script>
+
+  <button class="addBtn">Add new patient</button>
   <div id="wrapper"></div>
   <script>
     renderTable(JSON.parse( "{{ table_data | escapejs}}" ))
