--- a/doctor/static/doctor/styles/style.css
+++ b/doctor/static/doctor/styles/style.css
@@ -194,3 +194,52 @@ textarea {
 .done-task {
   opacity: 50%;
 }
+
+.overlay{
+  z-index: 1;
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  opacity: 50%;
+  background-color: grey;
+}
+
+.modal{
+  position: absolute;
+  top: calc((100% - 25%)/2);
+  left: calc((100% - 30%)/2);
+  z-index: 5;
+  width: 30%;
+  height: 25%;
+  border: black solid 1px;
+  background-color: white;
+  /* text-align: center; */
+  border-radius: 20px;
+  padding: 10px;
+}
+
+.modal ul {
+  width: 20%;
+  margin: auto;
+  padding: 5px;
+  text-align: center;
+}
+
+.options {
+  width: 60%;
+  margin: 5px auto;
+  text-align: center;
+}
+
+.options button{
+  margin: 10px;
+  width: 60%;
+}
+
+.reminder {
+  display: flex;
+  align-items: center;
+  gap: 10px; /* Space between elements */
+}
